[gd_scene load_steps=15 format=3 uid="uid://brjjat6j8gvna"]

[ext_resource type="Theme" uid="uid://xjn6s723t6oi" path="res://addons/proton_control_animation/examples/misc/example_theme.tres" id="1_iue33"]
[ext_resource type="Script" uid="uid://dhoqx8lfhmiro" path="res://addons/proton_control_animation/examples/misc/basic_example.gd" id="1_vvvhn"]
[ext_resource type="Script" uid="uid://b4hvmk8t0qkgu" path="res://addons/proton_control_animation/src/proton_control_animation.gd" id="2_kvx7x"]
[ext_resource type="Script" uid="uid://bi4omyv2xson" path="res://addons/proton_control_animation/src/animations/scale.gd" id="3_qj711"]
[ext_resource type="Script" uid="uid://bsufjcw4lsn2a" path="res://addons/proton_control_animation/src/animations/slide.gd" id="4_dkxil"]
[ext_resource type="Texture2D" uid="uid://b2vhwqtjgevox" path="res://icon.svg" id="6_jnopg"]

[sub_resource type="Resource" id="Resource_dkxil"]
script = ExtResource("3_qj711")
from = 2
from_scale = Vector2(0, 0)
to = 1
to_scale = Vector2(0, 0)
ease = 1
trans = 10
default_duration = 1.0
metadata/_custom_type_script = ExtResource("3_qj711")

[sub_resource type="Resource" id="Resource_qbm01"]
script = ExtResource("3_qj711")
from = 0
from_scale = Vector2(0, 0)
to = 2
to_scale = Vector2(0, 0)
ease = 1
trans = 2
default_duration = 1.0
metadata/_custom_type_script = ExtResource("3_qj711")

[sub_resource type="Resource" id="Resource_unyg3"]
script = ExtResource("4_dkxil")
from = 0
from_vector = Vector2(0, 0)
to = 3
to_vector = Vector2(20, 0)
ease = 1
trans = 4
default_duration = 0.18
metadata/_custom_type_script = ExtResource("4_dkxil")

[sub_resource type="Resource" id="Resource_iue33"]
script = ExtResource("4_dkxil")
from = 0
from_vector = Vector2(0, 0)
to = 1
to_vector = Vector2(0, 0)
ease = 1
trans = 4
default_duration = 0.22
metadata/_custom_type_script = ExtResource("4_dkxil")

[sub_resource type="Resource" id="Resource_jnopg"]
script = ExtResource("4_dkxil")
from = 3
from_vector = Vector2(200, 0)
to = 1
to_vector = Vector2(0, 0)
ease = 1
trans = 10
default_duration = 0.3
metadata/_custom_type_script = ExtResource("4_dkxil")

[sub_resource type="Resource" id="Resource_a6eo0"]
script = ExtResource("4_dkxil")
from = 0
from_vector = Vector2(0, 0)
to = 3
to_vector = Vector2(200, 0)
ease = 1
trans = 2
default_duration = 0.3
metadata/_custom_type_script = ExtResource("4_dkxil")

[sub_resource type="Resource" id="Resource_j3cwm"]
script = ExtResource("4_dkxil")
from = 0
from_vector = Vector2(0, 0)
to = 3
to_vector = Vector2(-30, 0)
ease = 1
trans = 2
default_duration = 0.18
metadata/_custom_type_script = ExtResource("4_dkxil")

[sub_resource type="Resource" id="Resource_rseu8"]
script = ExtResource("4_dkxil")
from = 0
from_vector = Vector2(0, 0)
to = 1
to_vector = Vector2(0, 0)
ease = 1
trans = 2
default_duration = 0.18
metadata/_custom_type_script = ExtResource("4_dkxil")

[node name="BasicExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iue33")
script = ExtResource("1_vvvhn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -82.5
offset_right = 167.0
offset_bottom = 82.5
grow_vertical = 2

[node name="ControlPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ControlPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Control panel"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ToggleCenter" type="Button" parent="MarginContainer/ControlPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Center panel"

[node name="ToggleSide" type="Button" parent="MarginContainer/ControlPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Side panel"

[node name="CenterPanel" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -183.0
offset_right = 111.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(97, 167)

[node name="ScaleInAnimation" type="Node" parent="CenterPanel" node_paths=PackedStringArray("targets")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_dkxil")
duration = 0.3
on_show = true

[node name="ScaleOutAnimation" type="Node" parent="CenterPanel" node_paths=PackedStringArray("targets")]
unique_name_in_owner = true
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_qbm01")
duration = 0.3
on_show = true

[node name="ButtonsHoverStartAnimation" type="Node" parent="CenterPanel" node_paths=PackedStringArray("targets")]
script = ExtResource("2_kvx7x")
targets = [NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton2"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton3"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton4")]
animation = SubResource("Resource_unyg3")
on_hover_start = true

[node name="ButtonsHoverEndAnimation" type="Node" parent="CenterPanel" node_paths=PackedStringArray("targets")]
script = ExtResource("2_kvx7x")
targets = [NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton2"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton3"), NodePath("../PanelContainer/MarginContainer/VBoxContainer/DummyButton4")]
animation = SubResource("Resource_iue33")
on_hover_stop = true

[node name="PanelContainer" type="PanelContainer" parent="CenterPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterPanel/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterPanel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Center panel"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DummyButton" type="Button" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dummy button"

[node name="DummyButton2" type="Button" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dummy button"

[node name="DummyButton3" type="Button" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dummy button"

[node name="DummyButton4" type="Button" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dummy button"

[node name="HSeparator2" type="HSeparator" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButtonCenter" type="Button" parent="CenterPanel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -175.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 2

[node name="SidePanel" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="SlideInAnimation" type="Node" parent="VBoxContainer/SidePanel" node_paths=PackedStringArray("targets")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_jnopg")
on_show = true

[node name="SlideOutAnimation" type="Node" parent="VBoxContainer/SidePanel" node_paths=PackedStringArray("targets")]
unique_name_in_owner = true
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_a6eo0")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/SidePanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SidePanel/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Side panel"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("6_jnopg")
expand_mode = 1
stretch_mode = 5

[node name="SlideLeft" type="Node" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer/TextureRect" node_paths=PackedStringArray("targets", "parent_animation")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_j3cwm")
delay = 0.12
on_parent_animation_end = true
parent_animation = NodePath("../../../../../SlideInAnimation")

[node name="SlideRight" type="Node" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer/TextureRect" node_paths=PackedStringArray("targets", "parent_animation")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_rseu8")
delay = 0.12
on_parent_animation_end = true
parent_animation = NodePath("../../TextureRect3/SlideLeft")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("6_jnopg")
expand_mode = 1
stretch_mode = 5

[node name="SlideLeft" type="Node" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer/TextureRect2" node_paths=PackedStringArray("targets", "parent_animation")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_j3cwm")
delay = 0.12
on_parent_animation_end = true
parent_animation = NodePath("../../TextureRect/SlideLeft")

[node name="SlideRight" type="Node" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer/TextureRect2" node_paths=PackedStringArray("targets", "parent_animation")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_rseu8")
delay = 0.12
on_parent_animation_end = true
parent_animation = NodePath("../../TextureRect/SlideRight")

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("6_jnopg")
expand_mode = 1
stretch_mode = 5

[node name="SlideLeft" type="Node" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer/TextureRect3" node_paths=PackedStringArray("targets", "parent_animation")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_j3cwm")
delay = 0.12
on_parent_animation_end = true
parent_animation = NodePath("../../TextureRect2/SlideLeft")

[node name="SlideRight" type="Node" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer/TextureRect3" node_paths=PackedStringArray("targets", "parent_animation")]
script = ExtResource("2_kvx7x")
targets = [NodePath("..")]
animation = SubResource("Resource_rseu8")
delay = 0.12
on_parent_animation_end = true
parent_animation = NodePath("../../TextureRect2/SlideRight")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButtonSide" type="Button" parent="VBoxContainer/SidePanel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
